--- a/openmrs/apps/customDisplayControl/views/birthCertificate.html
+++ b/openmrs/apps/customDisplayControl/views/birthCertificate.html
@@ -1,11 +1,66 @@
-<div>
-    {{config.title}}
-    <section class="dashboard-section">
-        <ul class="form-field">
-            <li ng-repeat="obsGroup in observations">
-                <span class="obs-date"> {{obsGroup.conceptNameToDisplay }} </span>
-                <span class="obs-date"> {{obsGroup.value}} </span>
-            </li>
-        </ul>
-    </section>
+<style>
+  h1,h2,h3,h4{line-height:1.1;color:#000}
+  p{color:#000}
+  div{color:#000}
+  span{ling-height:1.5}
+</style>
+<div style="margin:0 15px">
+<div style="position:absolute;margin-top:5px" >
+  <img src="../images/trishuli-logo.jpg" width="120"/>
 </div>
+
+<div class="header" style="position:relative;font-size:140%;">
+  <h3><center>Government of Nepal</center></h3>
+  <h3><center>Ministry of Health and Population</center></h3>
+  <h3><center>Department of Health Services</center></h3>
+  <h1><center><strong>District (Trishuli) Hospital<strong></center></h1>
+  <h4><center>Nuwakot</center></h4><br><br>
+</div>
+
+<h2 style="font-size:240%;line-height:1.3"><center><u>BIRTH - CERTIFICATE</u></center></h2>
+<br><br><br><br>
+
+<!-- to grab the date and time of birth -->
+<span id="birthDateTime" style="display:none">{{data["Date and time of delivery"]}}</span>
+<!-- ---------------------------------- -->
+
+<div style="font-size:240%;line-height:1.3; color:#000">
+  Birth Certificate No.:</br>
+  Patient No.: {{patient.identifier}}
+</div>
+<br><br><br><br>
+
+<p style="line-height:2; font-size:240%; color:#000;text-align:justify">
+This is to certifiy that a live <span><i>{{data["Infant gender"]}}</i></span> child was born to <span><i>Mrs. {{patient.name}}</i></span>, wife of <span><i>Mr. {{data["Name of Father"]}}</i></span> of <i><span>{{patient.address.cityVillage}}</span> - <span>{{patient.address.address1}}</span>, <span>{{patient.address.countyDistrict}}</span></i> on <i><span id="enDate"></span>/<span id="npDate"></span></i> at <i><span id="time"></span></i> with weight of <span><i>{{data["Infant weight"]}} grams</i></span> at Trishuli Hospital, Nuwakot, Nepal.
+  </p>
+
+<br><br><br><br><br><br><br><br><br><br><br><br>
+<div style="width:50%;position:relative;float:left;font-size:240%;line-height:2;color:#000">
+.......................................<br/>
+SBA Sister's Signature
+</div>
+<div style="width:50%;position:relative;float:left;font-size:240%;line-height:2;text-align:right;color:#000">
+..................................<br/>
+Doctor's Signature
+</div>
+</div>
+
+<script type="text/javascript">
+  function DateConverter(){this.englishMonths=[31,28,31,30,31,30,31,31,30,31,30,31],this.englishLeapMonths=[31,29,31,30,31,30,31,31,30,31,30,31],this.nepaliMonths=[[30,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,30,29,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,30],[31,32,31,32,31,30,30,30,29,30,29,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,31,32,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,31,29,30,30,29,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,30],[31,32,31,32,31,30,30,30,29,30,29,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,30],[31,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,31,32,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,30,30,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[30,32,31,32,31,31,29,30,29,30,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,29,31],[31,31,32,31,31,31,30,29,30,29,30,30],[31,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,29,30,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,30],[31,32,31,32,31,30,30,30,29,30,29,31],[31,31,31,32,31,31,30,29,30,29,30,30],[31,31,32,31,31,31,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,29,30,30],[31,31,32,32,31,30,30,30,29,30,30,30],[30,32,31,32,31,30,30,30,29,30,30,30],[31,31,32,31,31,30,30,30,29,30,30,30],[31,31,32,31,31,30,30,30,29,30,30,30],[31,32,31,32,30,31,30,30,29,30,30,30],[30,32,31,32,31,30,30,30,29,30,30,30],[31,31,32,31,31,31,30,30,29,30,30,30],[30,31,32,32,30,31,30,30,29,30,30,30],[30,32,31,32,31,30,30,30,29,30,30,30],[30,32,31,32,31,30,30,30,29,30,30,30],[31,31,32,31,31,31,30,30,29,30,30,30],[30,31,32,32,31,30,30,30,29,30,30,30],[30,32,31,32,31,30,30,30,29,30,30,30],[31,31,32,31,31,30,30,30,29,30,30,30],[31,31,32,31,31,31,30,29,30,30,30,30],[30,31,32,32,31,30,30,29,30,29,30,30],[31,32,31,32,31,30,30,30,29,30,30,30],[31,31,32,31,31,31,29,30,29,30,29,31],[31,31,32,31,31,31,30,29,29,30,30,30]],this.setCurrentDate=function(){var t=new Date;this.setEnglishDate(t.getFullYear(),t.getMonth()+1,t.getDate())},this.setEnglishDate=function(t,i,e){if(!this.isEnglishRange(t,i,e))throw new Exception("Invalid date format.");this.englishYear=t,this.englishMonth=i,this.englishDate=e,this.nepaliYear=2e3,this.nepaliMonth=1,this.nepaliDate=1;for(var n=this.getEnglishDateDifference(1943,4,14),s=0;n>=this.nepaliYearDays(s);)this.nepaliYear++,n-=this.nepaliYearDays(s),s++;for(var h=0;n>=this.nepaliMonths[s][h];)n-=this.nepaliMonths[s][h],this.nepaliMonth++,h++;this.nepaliDate=this.nepaliDate+n,this.getDay()},this.toEnglishString=function(t){return void 0===t&&(t="-"),this.englishYear+t+this.englishMonth+t+this.englishDate},this.getEnglishDateDifference=function(t,i,e){var n=this.countTotalEnglishDays(this.englishYear,this.englishMonth,this.englishDate)-this.countTotalEnglishDays(t,i,e);return n<0?-n:n},this.countTotalEnglishDays=function(t,i,e){for(var n=365*t+e,s=0;s<i-1;s++)n+=this.englishMonths[s];return n+=this.countleap(t,i)},this.countleap=function(t,i){return i<=2&&t--,Math.floor(t/4)-Math.floor(t/100)+Math.floor(t/400)},this.isEnglishRange=function(t,i,e){return!(t<1944||t>2042)&&(!(i<1||i>12)&&!(e<1||e>31))},this.isLeapYear=function(t){return t%4==0&&(t%100!=0||t%400==0)},this.setNepaliDate=function(t,i,e){if(!this.isNepaliRange(t,i,e))throw new Exception("Invalid date format.");this.nepaliYear=t,this.nepaliMonth=i,this.nepaliDate=e,this.englishYear=1944,this.englishMonth=1,this.englishDate=1;for(var n=this.getNepaliDateDifference(2e3,9,17);n>=(this.isLeapYear(this.englishYear)?366:365);)n-=this.isLeapYear(this.englishYear)?366:365,this.englishYear++;for(var s=this.isLeapYear(this.englishYear)?this.englishLeapMonths:this.englishMonths,h=0;n>=s[h];)this.englishMonth++,n-=s[h],h++;this.englishDate=this.englishDate+n,this.getDay()},this.toNepaliString=function(t){return void 0===t&&(t="-"),this.nepaliYear+t+this.nepaliMonth+t+this.nepaliDate},this.getNepaliDateDifference=function(t,i,e){var n=this.countTotalNepaliDays(this.nepaliYear,this.nepaliMonth,this.nepaliDate)-this.countTotalNepaliDays(t,i,e);return n<0?-n:n},this.countTotalNepaliDays=function(t,i,e){var n=0;if(t<2e3)return 0;n+=e-1;for(var s=t-2e3,h=0;h<i-1;h++)n+=this.nepaliMonths[s][h];for(h=0;h<s;h++)n+=this.nepaliYearDays(h);return n},this.nepaliYearDays=function(t){for(var i=0,e=0;e<12;e++)i+=this.nepaliMonths[t][e];return i},this.isNepaliRange=function(t,i,e){return!(t<2e3||t>2098)&&(!(i<1||i>12)&&!(e<1||e>this.nepaliMonths[t-2e3][i-1]))},this.getDay=function(){var t=this.getEnglishDateDifference(1943,4,14);return this.weekDay=(3+t%7)%7+1,this.weekDay},this.getEnglishYear=function(){return this.englishYear},this.getEnglishMonth=function(){return this.englishMonth},this.getEnglishDate=function(){return this.englishDate},this.getNepaliYear=function(){return this.nepaliYear},this.getNepaliMonth=function(){return this.nepaliMonth},this.getNepaliDate=function(){return this.nepaliDate}}
+</script>
+<script type="text/javascript">
+  var birthDateTime = document.getElementById("birthDateTime").innerHTML;
+  var adDate = birthDateTime.substring(0,10);
+  var time = birthDateTime.substring(11,100);
+  
+  var enDate = document.getElementById("enDate").innerHTML;
+  try{
+    var converter = new DateConverter();
+    converter.setEnglishDate(parseInt(adDate.substring(0,4)), parseInt(adDate.substring(5,7)), parseInt(adDate.substring(8,10)));
+    document.getElementById("enDate").innerHTML = adDate + " (AD)";
+    document.getElementById("npDate").innerHTML = converter.getNepaliYear()+"-"+converter.getNepaliMonth()+"-"+converter.getNepaliDate()+" (BS)";
+    document.getElementById("time").innerHTML = time;
+  }catch(err){
+    document.getElementById("npDate").innerHTML = 'err';
+  }
+</script>
